[package]
name = "bevy_scrollbar"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Bevy plugin providing a scrollbar."
keywords = ["bevy", "scrollbar", "ui"]
categories = ["game-development", "gui"]
repository = "https://github.com/gwafotapa/bevy_scrollbar"
documentation = "https://docs.rs/bevy_scrollbar"

[features]
default = ["std"]
std = ["bevy/std"]

[dependencies]
log = "0.4.27"

[dependencies.bevy]
version = "0.17.0-dev"
# git = "https://github.com/bevyengine/bevy"
# rev = "ef845e0cea8b290a83188f85fcd05db48907f9df"
path = "../bevy"
default-features = false
# bevy_sprite_picking_backend is a temporary fix because of a missing dependency in bevy
features = ["bevy_ui", "bevy_picking"]

[dev-dependencies.bevy]
version = "0.17.0-dev"
# git = "https://github.com/bevyengine/bevy"
# rev = "ef845e0cea8b290a83188f85fcd05db48907f9df"
path = "../bevy"
default-features = true

[lints.rust]
missing_docs = "warn"

[lints.clippy]
type_complexity = "allow"