[package]
name = "bevy_scrollbar"
version = "0.5.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Bevy plugin providing a scrollbar."
keywords = ["bevy", "scrollbar", "ui"]
categories = ["game-development", "gui"]
repository = "https://github.com/gwafotapa/bevy_scrollbar"
documentation = "https://docs.rs/bevy_scrollbar"

[dependencies]
log = "0.4.27"

[dependencies.bevy]
version = "0.17.2"
default-features = false
features = ["bevy_ui", "bevy_picking"]

[dev-dependencies.bevy]
version = "0.17.2"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
type_complexity = "allow"