[package]
name = "bevy_scrollbar"
version = "0.6.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Bevy plugin providing a scrollbar."
keywords = ["bevy", "scrollbar", "ui"]
categories = ["game-development", "gui"]
repository = "https://github.com/gwafotapa/bevy_scrollbar"
documentation = "https://docs.rs/bevy_scrollbar"

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = ["bevy_ui", "bevy_picking"] }
log = "0.4.27"

[dev-dependencies]
bevy = { version = "0.18.0", default-features = false, features = ["ui"] }

[lints.rust]
missing_docs = "warn"

[lints.clippy]
type_complexity = "allow"